# advent-of-code

./: .gitignore  CMakeLists.txt  README.md  clear-inputs.sh  fetch-inputs.sh  new-day.sh
2015/day01/: part1.cpp  part2.cpp
2015/day02/: part1.cpp  part2.cpp
2015/day03/: part1.cpp  part2.cpp
2015/day04/: part1.cpp  part2.cpp
2015/day05/: part1.cpp  part2.cpp
2015/day06/: part1.cpp  part2.cpp
2015/day07/: part1.cpp  part2.cpp
2015/day08/: part1.cpp  part2.cpp
2025/: CMakeLists.txt
2025/day01/: part1.cpp  part2.cpp
2025/day02/: part1.cpp  part2.cpp
2025/day03/: part1.cpp  part2.cpp
2025/day04/: part1.cpp  part2.cpp
2025/day05/: part1.cpp  part2.cpp
2025/day06/: part1.cpp  part2.cpp
2025/day07/: part1.cpp  part2.cpp
2025/day08/: part1.cpp  part2.cpp
2025/day09/: part1.cpp  part2.cpp
2025/day10/: part1.cpp  part2.cpp  too_slow_part2.cpp
2025/day11/: part1.cpp  part2.cpp
2025/day12/: part1.cpp
utils/: aoc.h
